PYIC-4262: changed code for Scenario 1 - Cohort 1 (No Evidence)